--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,9 +1,3 @@
-.main{
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-}
-
 .header{
     background-image: url("../../assets/img/familia2.jpeg");
     background-repeat: no-repeat;
@@ -14,28 +8,14 @@
     text-shadow: 1px 1px 1px;
 }
 
-.modulos{
-    flex-grow:1;
-    display: flex;
-    justify-content: center;
-}
-
-.conteudo1{
+.container{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    /* flex-basis: 460px; */
-}
-h4, h6{
-    text-shadow: 0.1px 0.2px #000b85;
+    align-items: center;
 }
 
-.text-dados{
-    color: #0C3A8E;
+.card{
+    
 
-}
-
-ul{
-    padding-inline-start:0;
 }
 
