--- a/src/app/show-doc/show-doc.component.html
+++ b/src/app/show-doc/show-doc.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center mt-5">
       <h4 class="text-center text-info">
         {{fxNome}}
         <span class="pull-right fa fa-times" title="Fechar" onclick="window.history.back(-1)"></span>
@@ -10,8 +10,5 @@
     <div class="text-center">
       <button class="btn btn-outline-info" onclick="window.history.back()"> Voltar</button>
     </div>
-
-
-
 </div>
 
