--- a/src/app/comprovativos/comprovativos.component.html
+++ b/src/app/comprovativos/comprovativos.component.html
@@ -1,45 +1,47 @@
 <div class="header d-flex justify-content-end align-items-center">
-<!--     <div class="text-header mr-5">
+  <!--     <div class="text-header mr-5">
       <h2 class="text-center d-none d-md-flex">Documentação Necessária</h2>
     </div> -->
-  </div>
+</div>
 
 <div class="container">
-    <h6 class="text-info text-center pt-3">COMPROVATIVOS NECESSÁRIOS</h6>
-    <p class="ml-5 mr-5"><small>Para que o processo fique concluido são necessários os seguintes comprovativos:</small></p>
-    
-    <div class="text-doc">
-        <div class="list-group" *ngFor="let d of docList">
-            <div *ngIf="d.status==1" class="d-flex justify-content-between">
-                <div class="d-flex justify-content-between" style="width:100%">
-                  <a *ngIf="d.status==1" routerLink="/showcomp" [queryParams]="{lead: d.lead, ln: d.linha}"
-                    class="list-group-item list-group-item-action d-flex justify-content-between  d-flex align-items-center">
-                    <div>{{d.instituicao}} - {{d.tipo}} - {{d.montante}}€ </div>
-                    <span class="fa fa-check text-success" *ngIf="d.status==1"> </span>
-                  </a>
-                </div>
-                <div class="flex-1 d-flex align-content-stretch"  title="Recarregar ficheiro para este comprovativo!">
-                  <a *ngIf="d.status==1" class="list-group-item list-group-item-action d-flex align-items-center"
-                    routerLink="/capcomp" [queryParams]="{lead: d.lead, linha: d.linha}">
-                    <span class="fa fa-undo text-info text-center"><small> </small></span>
-                  </a>
-                </div>
-              </div>
-              <a *ngIf="d.status==0" class="list-group-item list-group-item-action" routerLink="/capcomp" [queryParams]="{lead: d.lead, linha: d.linha}">
-                <div style="width:82%">{{d.instituicao}} - {{d.tipo}} - {{d.montante}}€  </div>
-                <span class="fa fa-upload text-info pull-right"><small> Anexar</small></span>
-              </a>
-            </div>
+  <h6 class="text-info text-center pt-3">COMPROVATIVOS NECESSÁRIOS</h6>
+  <p class="ml-5 mr-5"><small>Para que o processo fique concluido são necessários os seguintes comprovativos:</small>
+  </p>
+
+  <div class="text-doc">
+    <div class="list-group" *ngFor="let d of docList">
+      <div *ngIf="d.status==1" class="d-flex justify-content-between">
+        <div class="d-flex justify-content-between" style="width:100%">
+          <a *ngIf="d.status==1" routerLink="/showcomp" [queryParams]="{lead: d.lead, ln: d.linha}"
+            class="list-group-item list-group-item-action d-flex justify-content-between  d-flex align-items-center">
+            <div>{{d.instituicao}} - {{d.tipo}} - {{d.montante}}€ </div>
+            <span class="fa fa-check text-success" *ngIf="d.status==1"> </span>
+          </a>
+        </div>
+        <div class="flex-1 d-flex align-content-stretch" title="Recarregar ficheiro para este comprovativo!">
+          <a *ngIf="d.status==1" class="list-group-item list-group-item-action d-flex align-items-center"
+            routerLink="/capcomp" [queryParams]="{lead: d.lead, linha: d.linha}">
+            <span class="fa fa-undo text-info text-center"><small> </small></span>
+          </a>
+        </div>
+      </div>
+      <a *ngIf="d.status==0" class="list-group-item list-group-item-action" routerLink="/capcomp"
+        [queryParams]="{lead: d.lead, linha: d.linha}">
+        <div style="width:82%">{{d.instituicao}} - {{d.tipo}} - {{d.montante}}€ </div>
+        <span class="fa fa-upload text-info pull-right"><small> Anexar</small></span>
+      </a>
+    </div>
 
 
-    </div>
-    <div class="text-center mt-3">
-      <button class="btn btn-outline-warning" onclick="window.history.back()">Voltar</button>
-    </div>
-    </div>
-      
-      <!-- Modal -->
-     <!--  <div class="modal fade" id="anexarModal" tabindex="-1" role="dialog" aria-labelledby="anexar" aria-hidden="true">
+  </div>
+  <div class="text-center mt-3">
+    <button class="btn btn-outline-warning" onclick="window.history.back()">Voltar</button>
+  </div>
+</div>
+
+<!-- Modal -->
+<!--  <div class="modal fade" id="anexarModal" tabindex="-1" role="dialog" aria-labelledby="anexar" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document" >
           <div class="modal-content">
             <div class="modal-header">
@@ -64,5 +66,3 @@
           </div>
         </div>
       </div> -->
-    
-    
