cartão de credito novo folheto

--- a/src/app/credit-card/credit-card.component.html
+++ b/src/app/credit-card/credit-card.component.html
@@ -1,8 +1,10 @@
+<!--Desktop-->
 <div class="container-fluid d-none d-md-flex flex-wrap">
     <img style="width: 100%" src="./assets/CCimg/condicoes_CC_F1.png" alt="Folheto Cartão Crédito"/>
     <hr/>
     <img style="width: 100%" src="./assets/CCimg/condicoes_CC_F2.png" alt="Folheto Cartão Crédito"/>
 </div>
+<!-- Mobile -->
 <div class="container-fluid d-flex d-md-none flex-wrap">
     <img style="width: 100%" src="./assets/CCimg/condicoes_CC_3.png" alt="Folheto Cartão Crédito"/>
     <img style="width: 100%" src="./assets/CCimg/condicoes_CC_1.png" alt="Folheto Cartão Crédito"/>
