--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -66,8 +66,8 @@
 
       <p>Valor pretendido: <strong> {{credito.valorpretendido | currency:'€'}}</strong></p>
       <p>Prazo: <strong> {{credito.prazopretendido}} Meses</strong></p>
-      <p *ngIf="dados.sts==16 || dados.sts==17 || dados.sts==23 || dados.sts==24">Prestação:
-        <strong> {{credito.prestacaopretendida}} €/Mês</strong></p>
+<!--       <p *ngIf="dados.sts==16 || dados.sts==17 || dados.sts==23 || dados.sts==24">Prestação:
+        <strong> {{credito.prestacaopretendida}} €/Mês</strong></p> -->
     </div>
   </div>
   <!--AProvado ou Financiado-->
