upload img and create pdf file

--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -55,7 +55,10 @@
     <p>Provavelmente algum documento inserido não está em condições ou, após análise, é necessário outro documento que não 
       foi solicitado no inicio. Poderá ver qual na <small>DOCUMENTAÇÃO</small>.
     </p>
-    
+    <h6 class="text-info">Como obter o Domicilio Fiscal no Portal das Finanças?</h6>
+    <p>Siga este link <a href='https://www.portaldasfinancas.gov.pt/pt/CD/inicio.action' target="_blank">Portal das Finanças</a> em 
+      Serviços - Obter - Certidões - Efectuar pedido - Domicilio  Fiscal e depois Consultar certidões.
+    </p>
 
   </div>
 </div>
